fix(soql): make horizontal and vertical scrollbars visible in SOQL Builder UI results table - W-21735278, W-21734155 (#7229)
* fix: attempt 1 - scrollbars both appear but the padding is imperfect

* fix: add back the padding underneath the table

* fix: remove gray filler underneath the table when the table has few rows

* fix: put border back around entire header and footer

* revert: revert back to commit a46fde8

* fix: make gray box transparent again and add back border underneath footer

* revert: revert back to commit a46fde8 again

* fix: got rid of the gray filler! but it's a bit small?

* chore: remove unnecessary fallback in CSS in height

* fix: add 2px to account for border height

* fix: include height of horizontal scrollbar

* fix: handle large table height in JS instead of CSS

* fix: prevent unnecessary horizontal scrollbar for tables with few columns at full-width

* fix: resize results table whenever webview is resized, e.g. opening the Output Tab

--- a/packages/salesforcedx-vscode-soql/src/soql-data-view/queryDataView.css
+++ b/packages/salesforcedx-vscode-soql/src/soql-data-view/queryDataView.css
@@ -9,8 +9,27 @@
 This file can be used to override Tabulator CSS
 for custom styling http://tabulator.info/docs/4.8/style
 */
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+}
+
 body {
   font-family: var(--vscode-font-family, Arial, Helvetica, sans-serif);
+}
+
+body > div {
+  display: flex;
+  flex-direction: column;
+  height: var(--soql-table-height);
+}
+
+#data-table {
+  flex: 1;
+  min-height: 0;
+  overflow: auto;
 }
 
 :root {
@@ -45,10 +64,7 @@ header {
   height: 1.5rem;
   margin: 0.25rem 0 0 0.5rem;
   font-size: 1rem;
-  background-color: var(
-    --vscode-button-background,
-    var(--soql-color-medium-blue)
-  );
+  background-color: var(--vscode-button-background, var(--soql-color-medium-blue));
   color: var(--vscode-button-foreground, var(--soql-white));
   border: 0;
   border-radius: 3px;
